--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -179,21 +179,21 @@
 												{
 													if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
 													{
-														if (int.Parse(@juego.Analisis.Porcentaje) > 74)
+														if (int.Parse(juego.Analisis.Porcentaje) > 74)
 														{
 															<div style="width: 20px; height: 20px; margin-left: 10px;">
 																<img src="/imagenes/analisis/positive.webp" style="width: 100%; height: 100%;" />
 															</div>
 														}
 
-														if (int.Parse(@juego.Analisis.Porcentaje) > 49 && int.Parse(@juego.Analisis.Porcentaje) < 75)
+														if (int.Parse(juego.Analisis.Porcentaje) > 49 && int.Parse(juego.Analisis.Porcentaje) < 75)
 														{
 															<div style="width: 20px; height: 20px; margin-left: 10px;">
 																<img src="/imagenes/analisis/mixed.webp" style="width: 100%; height: 100%;" />
 															</div>
 														}
 
-														if (int.Parse(@juego.Analisis.Porcentaje) < 50)
+														if (int.Parse(juego.Analisis.Porcentaje) < 50)
 														{
 															<div style="width: 20px; height: 20px; margin-left: 10px;">
 																<img src="/imagenes/analisis/negative.webp" style="width: 100%; height: 100%;" />
