--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -2,6 +2,7 @@
 @using BaseDatos.Juegos;
 @using Juegos;
 @using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.Data.SqlClient;
 @using Microsoft.Extensions.Caching.Distributed;
@@ -11,7 +12,7 @@
 @using pepeizqs_deals_web.Areas.Identity.Data
 @using pepeizqs_deals_web.Pages.Componentes.Admin
 
-@rendermode @(new InteractiveServerRenderMode(prerender: true))
+@* @rendermode @(new InteractiveServerRenderMode(prerender: true)) *@
 
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
@@ -489,141 +490,146 @@ else
 
 @if (juegosMinimosMostrar.Count > 0)
 {
-	<div style="display: flex; font-size: 20px; align-items: center; justify-content: center;">
-		<a href="/historical-lows" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "LastLows", "Index")</a>
+	<div style="max-width: 1000px; margin: auto;">
+		<div style="display: flex; font-size: 20px; align-items: center; justify-content: center;">
+			<a href="/historical-lows" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "LastLows", "Index")</a>
 
-		<div class="tooltip2" style="margin-left: 20px;">
-			<i class="fa-solid fa-circle-info" style="font-size: 15px;"></i>
-			<div class="tooltip-abrir tooltip-derecha" style="padding: 20px; min-width: 400px; max-width: 600px;">
-				@Herramientas.Idiomas.CogerCadena(idioma, "LastLowsInfo", "Index")
+			<div class="tooltip2" style="margin-left: 20px;">
+				<i class="fa-solid fa-circle-info" style="font-size: 15px;"></i>
+				<div class="tooltip-abrir tooltip-derecha" style="padding: 20px; min-width: 400px; max-width: 600px;">
+					@Herramientas.Idiomas.CogerCadena(idioma, "LastLowsInfo", "Index")
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="tooltip4" onmousemove="hover(event, 'tooltip-minimos')" style="margin-bottom: 25px;">
-		@foreach (global::Juegos.Juego juego in juegosMinimosMostrar)
-		{
-			bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego, juego.PrecioMinimosHistoricos[0].DRM);
-			bool usuarioTieneDeseado = false;
+		<div class="tooltip4" onmousemove="hover(event, 'tooltip-minimos')" style="margin-bottom: 25px;">
+			<Virtualize Context="juego" Items="juegosMinimosMostrar" ItemSize="117" OverscanCount="6">
+				<ItemContent>
+					@{
+						bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego, juego.PrecioMinimosHistoricos[0].DRM);
+						bool usuarioTieneDeseado = false;
 
-			string fondoColor = string.Empty;
-			string fondoDescuento = "background-color: darkgreen;";
+						string fondoColor = string.Empty;
+						string fondoDescuento = "background-color: darkgreen;";
 
-			if (usuarioTieneJuego == true)
-			{
-				fondoColor = "background-color: var(--fondoBien);";
-				fondoDescuento = "backdrop-filter: brightness(70%);";
-			}
-			else
-			{
-				usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego, juego.PrecioMinimosHistoricos[0].DRM, true);
+						if (usuarioTieneJuego == true)
+						{
+							fondoColor = "background-color: var(--fondoBien);";
+							fondoDescuento = "backdrop-filter: brightness(70%);";
+						}
+						else
+						{
+							usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego, juego.PrecioMinimosHistoricos[0].DRM, true);
 
-				if (usuarioTieneDeseado == true)
+							if (usuarioTieneDeseado == true)
+							{
+								fondoColor = "background-color: var(--fondoAlerta);";
+								fondoDescuento = "backdrop-filter: brightness(70%);";
+							}
+						}
+					}
+					
+					<div class="perfil-flexible-centrado minimo-espacio3" style="margin-top: 20px;" @onmouseover="@(e => CargarTooltip(e, juego))">
+						<a class="boton-pequeño" style="padding: 2px; @fondoColor" href="/game/@juego.IdMaestra/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/">
+							<div class="perfil-flexible-centrado">
+								<div style="max-width: 230px;">
+									<img src="@juego.Imagenes.Header_460x215" style="height: 100%; width: 100%;" alt="@juego.Nombre" />
+								</div>
+
+								<div style="width: 100%; display: flex; flex-flow: column wrap; padding: 15px 20px;">
+									<div class="minimo-fuente">@juego.Nombre</div>
+									<div style="margin-top: 15px; display: flex; align-items: center;">
+										<img src="@CargarDRM(juego)" style="width: 16px; height: 16px; margin-right: 10px;" alt="DRM" />
+										<img src="@CargarIconoTienda(juego)" style="width: 16px; height: 16px; margin-right: 10px;" alt="Store" />
+										<div class="minimo-fuentefecha">@CargarFechaDetectado(juego)</div>
+									</div>
+								</div>
+
+								<div style="display: flex; align-items: center;">
+									<div style="text-align: center; padding: 10px 15px; margin: 0px; min-width: 65px; @fondoDescuento">
+										@CargarDescuento(juego)
+									</div>
+
+									<div style="padding: 5px 15px; min-width: 110px; text-align: center; font-size: 18px;">
+										@CargarPrecio(juego)
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+				</ItemContent>
+			</Virtualize>
+
+			<div id="tooltip-minimos" class="tooltip-relleno">
+				@if (string.IsNullOrEmpty(tooltipVideo) == false)
 				{
-					fondoColor = "background-color: var(--fondoAlerta);";
-					fondoDescuento = "backdrop-filter: brightness(70%);";
+					<video src="@tooltipVideo" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
 				}
-			}
 
-			<div class="perfil-flexible-centrado minimo-espacio3" style="margin-top: 20px;" @onmouseover="@(e => CargarTooltip(e, juego))">
-				<a class="boton-pequeño" style="padding: 2px; @fondoColor" href="/game/@juego.IdMaestra/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/">
-					<div class="perfil-flexible-centrado">
-						<div style="width: 20%;">
-							<img src="@juego.Imagenes.Capsule_231x87" style="height: 100%; width: 100%;" alt="@juego.Nombre"/>
-						</div>
-
-						<div style="width: 73%; display: flex; flex-flow: column wrap; padding: 15px 20px;">
-							<div class="minimo-fuente">@juego.Nombre</div>
-							<div style="margin-top: 10px; display: flex; align-items: center;">
-								<img src="@CargarDRM(juego)" style="width: 16px; height: 16px; margin-right: 10px;" alt="DRM"/>
-								<img src="@CargarIconoTienda(juego)" style="width: 16px; height: 16px; margin-right: 10px;" alt="Store"/>
-								<div class="minimo-fuentefecha">@CargarFechaDetectado(juego)</div>
-							</div>
-						</div>
-
-						<div style="width: 17%; display: flex; align-items: center; justify-content: center; text-align: center;">
-							<div class="minimo-fuente minimo-espacio2" style="@fondoDescuento">
-								@CargarDescuento(juego)
-							</div>
-
-							<div class="minimo-fuente minimo-espacio1" style="text-align: center;">
-								@CargarPrecio(juego)
-							</div>
-						</div>
-					</div>
-				</a>
-			</div>
-		}
-
-		<div id="tooltip-minimos" class="tooltip-relleno">
-			@if (string.IsNullOrEmpty(tooltipVideo) == false)
-			{
-				<video src="@tooltipVideo" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
-			}
-
-			<div style="padding: 12px; max-width: 430px;">
-				<label style="padding-left: 5px; padding-right: 5px;">@tooltipNombre</label>
-				<div style="display: flex; align-items: center; margin-top: 5px; padding: 5px; text-align: left; justify-content: left;">
-					<div style="margin-right: 20px;">
-						<img src="@tooltipDRM" style="max-width: 20px; max-height: 20px;" alt="DRM"/>
-					</div>
-					<div style="margin-right: 20px;">
-						<img src="@tooltipTienda" style="width: 20px; height: 20px;" alt="Store"/>
-					</div>
-
-					@if (string.IsNullOrEmpty(tooltipReviews) == false)
-					{
+				<div style="padding: 12px; max-width: 430px;">
+					<label style="padding-left: 5px; padding-right: 5px;">@tooltipNombre</label>
+					<div style="display: flex; align-items: center; margin-top: 5px; padding: 5px; text-align: left; justify-content: left;">
 						<div style="margin-right: 20px;">
-							<img src="@tooltipReviews" style="width: 20px; height: 20px;" alt="Reviews"/>
+							<img src="@tooltipDRM" style="max-width: 20px; max-height: 20px;" alt="DRM" />
+						</div>
+						<div style="margin-right: 20px;">
+							<img src="@tooltipTienda" style="width: 20px; height: 20px;" alt="Store" />
+						</div>
+
+						@if (string.IsNullOrEmpty(tooltipReviews) == false)
+						{
+							<div style="margin-right: 20px;">
+								<img src="@tooltipReviews" style="width: 20px; height: 20px;" alt="Reviews" />
+							</div>
+						}
+
+						<div style="margin-right: 15px; background-color: darkgreen; padding: 5px 10px;">
+							@tooltipDescuento
+						</div>
+						<div>
+							@tooltipPrecio
+						</div>
+					</div>
+
+					@if (string.IsNullOrEmpty(tooltipBundles) == false || string.IsNullOrEmpty(tooltipGratis) == false || string.IsNullOrEmpty(tooltipSuscripciones) == false)
+					{
+						<div style="font-size: 14px; margin-top: 5px; padding: 5px;">
+							<div>
+								@Herramientas.Idiomas.CogerCadena(idioma, "Tooltip1", "Index")
+							</div>
+
+							@if (string.IsNullOrEmpty(tooltipBundles) == false)
+							{
+								<div>
+									• @tooltipBundles
+								</div>
+							}
+
+							@if (string.IsNullOrEmpty(tooltipGratis) == false)
+							{
+								<div>
+									• @tooltipGratis
+								</div>
+							}
+
+							@if (string.IsNullOrEmpty(tooltipSuscripciones) == false)
+							{
+								<div>
+									• @tooltipSuscripciones
+								</div>
+							}
 						</div>
 					}
-
-					<div style="margin-right: 15px; background-color: darkgreen; padding: 5px 10px;">
-						@tooltipDescuento
-					</div>
-					<div>
-						@tooltipPrecio
-					</div>
 				</div>
-
-				@if (string.IsNullOrEmpty(tooltipBundles) == false || string.IsNullOrEmpty(tooltipGratis) == false || string.IsNullOrEmpty(tooltipSuscripciones) == false)
-				{
-					<div style="font-size: 14px; margin-top: 5px; padding: 5px;">
-						<div>
-							@Herramientas.Idiomas.CogerCadena(idioma, "Tooltip1", "Index")
-						</div>
-
-						@if (string.IsNullOrEmpty(tooltipBundles) == false)
-						{
-							<div>
-								• @tooltipBundles
-							</div>
-						}
-
-						@if (string.IsNullOrEmpty(tooltipGratis) == false)
-						{
-							<div>
-								• @tooltipGratis
-							</div>
-						}
-
-						@if (string.IsNullOrEmpty(tooltipSuscripciones) == false)
-						{
-							<div>
-								• @tooltipSuscripciones
-							</div>
-						}
-					</div>
-				}
 			</div>
 		</div>
-	</div>
 
-	<div style="margin-bottom: 20px; margin-left: auto; margin-right: auto; width: 400px;">
-		<a class="boton-pequeño" style="width: 100%; padding: 15px 20px; font-size: 17px; text-align: center;" href="/historical-lows?mode=last">
-			@Herramientas.Idiomas.CogerCadena(idioma, "LastLowsMore", "Index")
-		</a>
-	</div>
+		<div style="margin-bottom: 20px; margin-left: auto; margin-right: auto; width: 400px;">
+			<a class="boton-pequeño" style="width: 100%; padding: 15px 20px; font-size: 17px; text-align: center;" href="/historical-lows?mode=last">
+				@Herramientas.Idiomas.CogerCadena(idioma, "LastLowsMore", "Index")
+			</a>
+		</div>
+	</div>	
 }
 
 <script>
@@ -668,7 +674,7 @@ else
 
 	protected override async Task OnInitializedAsync()
 	{
-		usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
+		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
 
 		if (usuario != null)
 		{
@@ -909,7 +915,7 @@ else
 	private string tooltipGratis = string.Empty;
 	private string tooltipSuscripciones = string.Empty;
 
-	private void CargarTooltip(MouseEventArgs args, global::Juegos.Juego juego)
+	private void CargarTooltip(MouseEventArgs args, Juegos.Juego juego)
 	{
 		tooltipNombre = juego.Nombre;
 		tooltipDescuento = CargarDescuento(juego);
@@ -976,7 +982,7 @@ else
 		}
 	}
 
-	private string CargarDRM(global::Juegos.Juego juego)
+	private string CargarDRM(Juegos.Juego juego)
 	{
 		string imagen = null;
 
@@ -1001,7 +1007,7 @@ else
 		}
 	}
 
-	private string CargarIconoTienda(global::Juegos.Juego juego)
+	private string CargarIconoTienda(Juegos.Juego juego)
 	{
 		string imagen = null;
 
@@ -1026,7 +1032,7 @@ else
 		}
 	}
 
-	private string CargarDescuento(global::Juegos.Juego juego)
+	private string CargarDescuento(Juegos.Juego juego)
 	{
 		string descuentoMensaje = null;
 
@@ -1043,7 +1049,7 @@ else
 		}
 	}
 
-	private string CargarPrecio(global::Juegos.Juego juego)
+	private string CargarPrecio(Juegos.Juego juego)
 	{
 		string precioMensaje = null;
 
@@ -1074,7 +1080,7 @@ else
 		}
 	}
 
-	private string CargarFechaDetectado(global::Juegos.Juego juego)
+	private string CargarFechaDetectado(Juegos.Juego juego)
 	{
 		string mensaje = null;
 
@@ -1086,7 +1092,7 @@ else
 		return mensaje;
 	}
 
-	private string CargarVideo(global::Juegos.Juego juego)
+	private string CargarVideo(Juegos.Juego juego)
 	{
 		string video = null;
 
@@ -1162,7 +1168,7 @@ else
 
 					if (juegos != null)
 					{
-						global::Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(juegos[0]);
+						Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(juegos[0]);
 
 						if (juego != null)
 						{
