--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
@@ -1,6 +1,7 @@
 ﻿@using BaseDatos.Juegos;
 @using Juegos;
 @using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.Data.SqlClient;
 @using Microsoft.JSInterop
@@ -8,65 +9,50 @@
 
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
-@inject IJSRuntime JavaScript
 
 @if (juegosMostrar.Count > 0)
 {
-	<div style="background-color: var(--fondoCuerpo); position: sticky; position: -webkit-sticky; top: 70px; z-index: 1; margin: -10px; padding: 10px;">
-		<div style="display: flex; align-items: center; width: 100%;">
-			<div style="width: 70%; font-size: 23px; text-align: left;">
-				@Herramientas.Idiomas.CogerCadena(idioma, "LastAdded.String1")
-			</div>
-
-			<div style="display: flex; align-items: center; width: 30%; justify-content: right;">
-				<div style="font-size: 16px; text-align: right;">
-					@minimo.ToString()/@juegos.Count.ToString()
+	<div style="max-width: 1000px; margin: auto;">
+		<div style="background-color: var(--fondoCuerpo);">
+			<div style="display: flex; align-items: center; width: 100%;">
+				<div style="width: 100%; font-size: 23px; text-align: left;">
+					@Herramientas.Idiomas.CogerCadena(idioma, "String1", "LastAdded")
 				</div>
-
-				@if (minimo >= 50)
-				{
-					<a @onclick="ClickearAtras" class="boton-pequeño" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px; cursor: pointer;">
-						<i class="fa-solid fa-chevron-left"></i>
-					</a>
-				}
-
-				<a @onclick="ClickearAdelante" class="boton-pequeño" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px; cursor: pointer;">
-					<i class="fa-solid fa-chevron-right"></i>
-				</a>
 			</div>
 		</div>
-	</div>
 
-	<hr />
+		<hr />
 
-	<div>
-		@foreach (global::Juegos.Juego juego in juegosMostrar)
-		{
-			<div class="perfil-flexible-centrado" style="margin-top: 25px; margin-bottom: 25px;">
-				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/">
-					<div class="perfil-flexible-centrado">
-						<div>
-							<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
-						</div>
-
-						<div style="width: 100%; padding: 5px 20px;">
-							<div style="font-size: 18px;">@juego.Nombre</div>
-
-							@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
-							{
-								<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
-									<div style="font-size: 13px;">@juego.Id</div>
+		<div>
+			<Virtualize Context="juego" Items="juegosMostrar" ItemSize="107" OverscanCount="6">
+				<ItemContent>
+					<div class="perfil-flexible-centrado" style="margin-top: 25px; margin-bottom: 25px;">
+						<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/">
+							<div class="perfil-flexible-centrado">
+								<div>
+									<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
 								</div>
-							}							
-						</div>
 
-						<div style="width: 250px; padding: 5px 15px; text-align: center; font-size: 17px;">
-							@GenerarMensaje(juego)
-						</div>
+								<div style="width: 100%; padding: 5px 20px;">
+									<div style="font-size: 18px;">@juego.Nombre</div>
+
+									@if (BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
+									{
+										<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
+											<div style="font-size: 13px;">@juego.Id</div>
+										</div>
+									}
+								</div>
+
+								<div style="width: 250px; padding: 5px 15px; text-align: center; font-size: 17px;">
+									@GenerarMensaje(juego)
+								</div>
+							</div>
+						</a>
 					</div>
-				</a>
-			</div>
-		}
+				</ItemContent>
+			</Virtualize>
+		</div>
 	</div>
 }
 
@@ -77,74 +63,28 @@
 	[Parameter]
 	public string idioma { get; set; }
 
-	[Parameter]
-	public string dominio { get; set; }
+	private List<Juegos.Juego> juegosMostrar = new List<Juegos.Juego>();
 
-	private List<global::Juegos.Juego> juegos = new List<global::Juegos.Juego>();
-	private List<global::Juegos.Juego> juegosMostrar = new List<global::Juegos.Juego>();
-
-	private int minimo = 0;
-	private int maximo = 0;
+	private Usuario usuario = new Usuario();
 
 	protected override async Task OnInitializedAsync()
 	{
-		minimo = 0;
-		maximo = 50;
-
 		SqlConnection conexion = Herramientas.BaseDatos.Conectar();
 
 		using (conexion)
 		{
-			juegos = Buscar.Ultimos(conexion, "juegos", 500);
+			juegosMostrar = Buscar.Ultimos(conexion, "juegos", 500);
 
-			if (juegos.Count > 0)
+			if (juegosMostrar != null)
 			{
-				foreach (var juego in juegos)
+				if (juegosMostrar.Count > 0)
 				{
-					juego.Imagenes.Capsule_231x87 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.Id.ToString(), "capsule_231x87", dominio);
+					juegosMostrar = juegosMostrar.OrderBy(x => x.Id).Reverse().ToList();
 				}
-
-				juegos = juegos.OrderBy(x => x.Id).Reverse().ToList();
 			}
 		}
 
-		CargarJuegos(minimo, maximo);
-	}
-
-	private void CargarJuegos(int minimo2, int maximo2)
-	{
-		juegosMostrar.Clear();
-
-		for (int i = minimo2; i < maximo2; i += 1)
-		{
-			juegosMostrar.Add(juegos[i]);
-		}
-	}
-
-	private async void ClickearAdelante()
-	{
-		if (minimo + 50 < juegos.Count && maximo + 50 < juegos.Count)
-		{
-			minimo = minimo + 50;
-			maximo = maximo + 50;
-		}
-
-		CargarJuegos(minimo, maximo);
-
-		await JavaScript.InvokeVoidAsync("moverScroll", "cuerpazo");
-	}
-
-	private async void ClickearAtras()
-	{
-		if (minimo - 50 >= 0 && maximo - 50 >= 0)
-		{
-			minimo = minimo - 50;
-			maximo = maximo - 50;
-		}
-
-		CargarJuegos(minimo, maximo);
-
-		await JavaScript.InvokeVoidAsync("moverScroll", "cuerpazo");
+		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
 	}
 
 	private string GenerarMensaje(Juegos.Juego juego)
@@ -155,7 +95,7 @@
 		{
 			if (juego.FreeToPlay.ToLower() == "true")
 			{
-				return Herramientas.Idiomas.CogerCadena(idioma, "Search.String6");
+				return Herramientas.Idiomas.CogerCadena(idioma, "SearchMessage6", "Header");
 			}
 		}
 
@@ -167,7 +107,7 @@
 				{
 					if (DateTime.Now >= gratis.FechaEmpieza && DateTime.Now <= gratis.FechaTermina)
 					{
-						return Herramientas.Idiomas.CogerCadena(idioma, "Search.String5");
+						return Herramientas.Idiomas.CogerCadena(idioma, "SearchMessage5", "Header");
 					}
 				}
 			}
@@ -181,7 +121,7 @@
 				{
 					if (DateTime.Now >= bundle.FechaEmpieza && DateTime.Now <= bundle.FechaTermina)
 					{
-						return Herramientas.Idiomas.CogerCadena(idioma, "Search.String4");
+						return Herramientas.Idiomas.CogerCadena(idioma, "SearchMessage4", "Header");
 					}
 				}
 			}
@@ -195,7 +135,7 @@
 				{
 					if (DateTime.Now >= suscripcion.FechaEmpieza && DateTime.Now <= suscripcion.FechaTermina)
 					{
-						return Herramientas.Idiomas.CogerCadena(idioma, "Search.String3");
+						return Herramientas.Idiomas.CogerCadena(idioma, "SearchMessage3", "Header");
 					}
 				}
 			}
@@ -246,14 +186,14 @@
 
 				precioTexto = precioTexto + "€";
 
-				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Search.String1"), precioTexto);
+				return string.Format(Herramientas.Idiomas.CogerCadena(idioma, "SearchMessage1", "Header"), precioTexto);
 			}
 			else
 			{
-				return Herramientas.Idiomas.CogerCadena(idioma, "Search.String2");
+				return Herramientas.Idiomas.CogerCadena(idioma, "SearchMessage2", "Header");
 			}
 		}
 
-		return Herramientas.Idiomas.CogerCadena(idioma, "Search.String2");
+		return Herramientas.Idiomas.CogerCadena(idioma, "SearchMessage2", "Header");
 	}
 }
