--- a/pepeizqs deals web/Areas/Identity/Pages/_CuentaLayout.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/_CuentaLayout.cshtml
@@ -17,12 +17,12 @@
 					<ul class="nav nav-tabs card-header-tabs">
 						<li class="nav-item">
 							<a class="texto-cabecera texto-cabecera-carta" href="/Identity/Account/Login">
-								@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Login")
+								@Herramientas.Idiomas.CogerCadena(idioma, "Login", "Header")
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="texto-cabecera texto-cabecera-carta" href="/Identity/Account/Register">
-								@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Register")
+								@Herramientas.Idiomas.CogerCadena(idioma, "Register", "Header")
 							</a>
 						</li>
 					</ul>
